[project]
name = "example-python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "example_python_library",
]

[tool.uv.sources]
example_python_library = { git = "https://github.com/cgravill/example_python_library.git" }
